--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,106 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{euclid2024_12,
+		abbr = {euclid2024_2409.03524v1.png},
+ 		bibtex_show = {true},
+       author = {{Euclid Collaboration} and {Koyama}, K. and {Pamuk}, S. and {Casas}, S. and {Bose}, B. and {Carrilho}, P. and {S{\'a}ez-Casares}, I. and {Atayde}, L. and {Cataneo}, M. and {Fiorini}, B. and {Giocoli}, C. and {Le Brun}, A.~M.~C. and {Pace}, F. and {Pourtsidou}, A. and {Rasera}, Y. and {Sakr}, Z. and {Winther}, H. -A. and {Altamura}, E. and {Adamek}, J. and {Baldi}, M. and {Breton}, M. -A. and {R{\'a}cz}, G. and {Vernizzi}, F. and {Amara}, A. and {Andreon}, S. and {Auricchio}, N. and {Baccigalupi}, C. and {Bardelli}, S. and {Bernardeau}, F. and {Bodendorf}, C. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Caillat}, A. and {Camera}, S. and {Capobianco}, V. and {Carbone}, C. and {Carretero}, J. and {Castellano}, M. and {Castignani}, G. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {De Lucia}, G. and {Douspis}, M. and {Dubath}, F. and {Duncan}, C.~A.~J. and {Dupac}, X. and {Dusini}, S. and {Farina}, M. and {Farrens}, S. and {Ferriol}, S. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Galeotta}, S. and {Gillis}, B. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Guzzo}, L. and {Hailey}, M. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Hudelot}, P. and {Ili{\'c}}, S. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kubik}, B. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Mainetti}, G. and {Maino}, D. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Medinaceli}, E. and {Mei}, S. and {Melchior}, M. and {Mellier}, Y. and {Meneghetti}, M. and {Merlin}, E. and {Meylan}, G. and {Moresco}, M. and {Moscardini}, L. and {Munari}, E. and {Neissner}, C. and {Niemi}, S. -M. and {Padilla}, C. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Percival}, W.~J. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Pozzetti}, L. and {Raison}, F. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Saglia}, R. and {Salvignol}, J. -C. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Schrabback}, T. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Tallada-Cresp{\'\i}}, P. and {Taylor}, A.~N. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Valenziano}, L. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Veropalumbo}, A. and {Wang}, Y. and {Weller}, J. and {Zamorani}, G. and {Zucca}, E. and {Biviano}, A. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Fabbian}, G. and {Farinelli}, R. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Mauri}, N. and {Pezzotta}, A. and {P{\"o}ntinen}, M. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Ballardini}, M. and {Bertacca}, D. and {Blanchard}, A. and {Blot}, L. and {B{\"o}hringer}, H. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Camacho Quevedo}, B. and {Ca{\~n}as-Herrera}, G. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Cooray}, A.~R. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ezziati}, M. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Finoguenov}, A. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gautard}, V. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Joudaki}, S. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Liu}, S.~J. and {Loureiro}, A. and {Maggio}, G. and {Magliocchetti}, M. and {Mannucci}, F. and {Maoli}, R. and {Mart{\'\i}n-Fleitas}, J. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Miluzio}, M. and {Monaco}, P. and {Montoro}, A. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Murray}, C. and {Nadathur}, S. and {Walton}, Nicholas A. and {Pagano}, L. and {Patrizii}, L. and {Popa}, V. and {Potter}, D. and {Reimberg}, P. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Sarpa}, E. and {Schneider}, A. and {Sereno}, M. and {Silvestri}, A. and {Spurio Mancini}, A. and {Stadel}, J. and {Tanidis}, K. and {Tao}, C. and {Tessore}, N. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valiviita}, J. and {Vergani}, D. and {Verza}, G. and {Vielzeuf}, P.},
+        title = "{Euclid preparation. Simulations and nonlinearities beyond ΛCDM. 4. Constraints on $f(R)$ models from the photometric primary probes}",
+      abstract = "{We study the constraint on f(R) gravity that can be obtained by photometric primary probes of the Euclid mission. Our focus is the dependence of the constraint on the theoretical modelling of the nonlinear matter power spectrum. In the Hu-Sawicki f(R) gravity model, we consider four different predictions for the ratio between the power spectrum in f(R) and that in ΛCDM: a fitting formula, the halo model reaction approach, ReACT and two emulators based on dark matter only N-body simulations, FORGE and e-Mantis. These predictions are added to the MontePython implementation to predict the angular power spectra for weak lensing (WL), photometric galaxy clustering and their cross-correlation. By running Markov Chain Monte Carlo, we compare constraints on parameters and investigate the bias of the recovered f(R) parameter if the data are created by a different model. For the pessimistic setting of WL, one dimensional bias for the f(R) parameter, log10|fR0|, is found to be 0.5σ when FORGE is used to create the synthetic data with log10|fR0|=−5.301 and fitted by e-Mantis. The impact of baryonic physics on WL is studied by using a baryonification emulator BCemu. For the optimistic setting, the f(R) parameter and two main baryon parameters are well constrained despite the degeneracies among these parameters. However, the difference in the nonlinear dark matter prediction can be compensated by the adjustment of baryon parameters, and the one-dimensional marginalised constraint on log10|fR0| is biased. This bias can be avoided in the pessimistic setting at the expense of weaker constraints. For the pessimistic setting, using the ΛCDM synthetic data for WL, we obtain the prior-independent upper limit of log10|fR0|<−5.6. Finally, we implement a method to include theoretical errors to avoid the bias.}",
+	  journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.03524},
+        pages = {arXiv:2409.03524},
+archivePrefix = {arXiv},
+       eprint = {2409.03524},
+	   arxiv = {2409.03524},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240903524E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{euclid2024_11,
+		abbr = {euclid2024_2409.03523v1.png},
+ 		bibtex_show = {true},
+       author = {{Euclid Collaboration} and {R{\'a}cz}, G. and {Breton}, M. -A. and {Fiorini}, B. and {Le Brun}, A.~M.~C. and {Winther}, H. -A. and {Sakr}, Z. and {Pizzuti}, L. and {Ragagnin}, A. and {Gayoux}, T. and {Altamura}, E. and {Carella}, E. and {Pardede}, K. and {Verza}, G. and {Koyama}, K. and {Baldi}, M. and {Pourtsidou}, A. and {Vernizzi}, F. and {Adame}, A.~G. and {Adamek}, J. and {Avila}, S. and {Carbone}, C. and {Despali}, G. and {Giocoli}, C. and {Hern{\'a}ndez-Aguayo}, C. and {Hassani}, F. and {Kunz}, M. and {Li}, B. and {Rasera}, Y. and {Yepes}, G. and {Gonzalez-Perez}, V. and {Corasaniti}, P. -S. and {Garc{\'\i}a-Bellido}, J. and {Hamaus}, N. and {Kiessling}, A. and {Marinucci}, M. and {Moretti}, C. and {Mota}, D.~F. and {Piga}, L. and {Pisani}, A. and {Szapudi}, I. and {Tallada-Cresp{\'\i}}, P. and {Aghanim}, N. and {Andreon}, S. and {Baccigalupi}, C. and {Bardelli}, S. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Camera}, S. and {Capobianco}, V. and {Cardone}, V.~F. and {Carretero}, J. and {Casas}, S. and {Castellano}, M. and {Castignani}, G. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {De Lucia}, G. and {Douspis}, M. and {Dubath}, F. and {Duncan}, C.~A.~J. and {Dupac}, X. and {Dusini}, S. and {Ealet}, A. and {Farina}, M. and {Farrens}, S. and {Ferriol}, S. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Fumana}, M. and {Galeotta}, S. and {Gillis}, B. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Ili{\'c}}, S. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kilbinger}, M. and {Kitching}, T. and {Kubik}, B. and {Kurki-Suonio}, H. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Mainetti}, G. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Medinaceli}, E. and {Mei}, S. and {Mellier}, Y. and {Meneghetti}, M. and {Meylan}, G. and {Moresco}, M. and {Moscardini}, L. and {Niemi}, S. -M. and {Padilla}, C. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Percival}, W.~J. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Raison}, F. and {Rebolo}, R. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Saglia}, R. and {Salvignol}, J. -C. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Schrabback}, T. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Taylor}, A.~N. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Valenziano}, L. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Wang}, Y. and {Weller}, J. and {Zucca}, E. and {Biviano}, A. and {Boucaud}, A. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Fabbian}, G. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Mauri}, N. and {Pezzotta}, A. and {P{\"o}ntinen}, M. and {Porciani}, C. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Allevato}, V. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Balaguera-Antolinez}, A. and {Ballardini}, M. and {Bertacca}, D. and {Blot}, L. and {Borgani}, S. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Camacho Quevedo}, B. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Cooray}, A.~R. and {De Caro}, B. and {de la Torre}, S. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Gasparetto}, T. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Lacasa}, F. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Macias-Perez}, J. and {Maggio}, G. and {Magliocchetti}, M. and {Mannucci}, F. and {Maoli}, R. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Miluzio}, M. and {Monaco}, P. and {Montoro}, A. and {Mora}, A. and {Morgante}, G. and {Nadathur}, S. and {Walton}, Nicholas A. and {Patrizii}, L. and {Popa}, V. and {Potter}, D. and {Reimberg}, P. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Schneider}, A. and {Sereno}, M. and {Silvestri}, A. and {Spurio Mancini}, A. and {Stadel}, J. and {Tanidis}, K. and {Tao}, C. and {Tessore}, N. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Vielzeuf}, P.},
+        title = "{Euclid preparation. Simulations and nonlinearities beyond ΛCDM. 2. Results from non-standard simulations}",
+      abstract = "{The Euclid mission will measure cosmological parameters with unprecedented precision. To distinguish between cosmological models, it is essential to generate realistic mock observables from cosmological simulations that were run in both the standard Λ-cold-dark-matter (ΛCDM) paradigm and in many non-standard models beyond ΛCDM. We present the scientific results from a suite of cosmological N-body simulations using non-standard models including dynamical dark energy, k-essence, interacting dark energy, modified gravity, massive neutrinos, and primordial non-Gaussianities. We investigate how these models affect the large-scale-structure formation and evolution in addition to providing synthetic observables that can be used to test and constrain these models with Euclid data. We developed a custom pipeline based on the Rockstar halo finder and the nbodykit large-scale structure toolkit to analyse the particle output of non-standard simulations and generate mock observables such as halo and void catalogues, mass density fields, and power spectra in a consistent way. We compare these observables with those from the standard ΛCDM model and quantify the deviations. We find that non-standard cosmological models can leave significant imprints on the synthetic observables that we have generated. Our results demonstrate that non-standard cosmological N-body simulations provide valuable insights into the physics of dark energy and dark matter, which is essential to maximising the scientific return of Euclid.}",
+	  journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.03523},
+        pages = {arXiv:2409.03523},
+archivePrefix = {arXiv},
+       eprint = {2409.03523},
+	   arxiv = {2409.03523},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240903523E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{euclid2024_10,
+		abbr = {euclid2024_2409.03522v1.png},
+ 		bibtex_show = {true},
+       author = {{Euclid Collaboration} and {Adamek}, J. and {Fiorini}, B. and {Baldi}, M. and {Brando}, G. and {Breton}, M. -A. and {Hassani}, F. and {Koyama}, K. and {Le Brun}, A.~M.~C. and {R{\'a}cz}, G. and {Winther}, H. -A. and {Casalino}, A. and {Hern{\'a}ndez-Aguayo}, C. and {Li}, B. and {Potter}, D. and {Altamura}, E. and {Carbone}, C. and {Giocoli}, C. and {Mota}, D.~F. and {Pourtsidou}, A. and {Sakr}, Z. and {Vernizzi}, F. and {Amara}, A. and {Andreon}, S. and {Auricchio}, N. and {Baccigalupi}, C. and {Bardelli}, S. and {Battaglia}, P. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Caillat}, A. and {Camera}, S. and {Capobianco}, V. and {Cardone}, V.~F. and {Carretero}, J. and {Casas}, S. and {Castander}, F.~J. and {Castellano}, M. and {Castignani}, G. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {De Lucia}, G. and {Douspis}, M. and {Dubath}, F. and {Dupac}, X. and {Dusini}, S. and {Farina}, M. and {Farrens}, S. and {Ferriol}, S. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Fumana}, M. and {Galeotta}, S. and {Gillis}, B. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Guzzo}, L. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Ili{\'c}}, S. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kubik}, B. and {K{\"u}mmel}, M. and {Kunz}, M. and {Kurki-Suonio}, H. and {Ligori}, S. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Mainetti}, G. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Medinaceli}, E. and {Mei}, S. and {Melchior}, M. and {Mellier}, Y. and {Meneghetti}, M. and {Merlin}, E. and {Meylan}, G. and {Moresco}, M. and {Moscardini}, L. and {Neissner}, C. and {Niemi}, S. -M. and {Padilla}, C. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Percival}, W.~J. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Pozzetti}, L. and {Raison}, F. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Saglia}, R. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Schrabback}, T. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Tallada-Cresp{\'\i}}, P. and {Tavagnacco}, D. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Valentijn}, E.~A. and {Valenziano}, L. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Veropalumbo}, A. and {Wang}, Y. and {Weller}, J. and {Zamorani}, G. and {Zucca}, E. and {Biviano}, A. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Fabbian}, G. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Mauri}, N. and {Pezzotta}, A. and {P{\"o}ntinen}, M. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Allevato}, V. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Balaguera-Antolinez}, A. and {Ballardini}, M. and {Blanchard}, A. and {Blot}, L. and {B{\"o}hringer}, H. and {Borgani}, S. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Camacho Quevedo}, B. and {Ca{\~n}as-Herrera}, G. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Cooray}, A.~R. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Finoguenov}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gautard}, V. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Joudaki}, S. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Kruk}, S. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Maggio}, G. and {Magliocchetti}, M. and {Mannucci}, F. and {Maoli}, R. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Migliaccio}, M. and {Miluzio}, M. and {Monaco}, P. and {Montoro}, A. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Nadathur}, S. and {Patrizii}, L. and {Popa}, V. and {Reimberg}, P. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Sarpa}, E. and {Schneider}, A. and {Sereno}, M. and {Silvestri}, A. and {Spurio Mancini}, A. and {Tanidis}, K. and {Tao}, C. and {Tessore}, N. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Verza}, G. and {Vielzeuf}, P. and {Walton}, N.~A.},
+        title = "{Euclid preparation. Simulations and nonlinearities beyond ΛCDM. 1. Numerical methods and validation}",
+      abstract = "{To constrain models beyond ΛCDM, the development of the Euclid analysis pipeline requires simulations that capture the nonlinear phenomenology of such models. We present an overview of numerical methods and N-body simulation codes developed to study the nonlinear regime of structure formation in alternative dark energy and modified gravity theories. We review a variety of numerical techniques and approximations employed in cosmological N-body simulations to model the complex phenomenology of scenarios beyond ΛCDM. This includes discussions on solving nonlinear field equations, accounting for fifth forces, and implementing screening mechanisms. Furthermore, we conduct a code comparison exercise to assess the reliability and convergence of different simulation codes across a range of models. Our analysis demonstrates a high degree of agreement among the outputs of different simulation codes, providing confidence in current numerical methods for modelling cosmic structure formation beyond ΛCDM. We highlight recent advances made in simulating the nonlinear scales of structure formation, which are essential for leveraging the full scientific potential of the forthcoming observational data from the Euclid mission.}",
+	  journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.03522},
+        pages = {arXiv:2409.03522},
+archivePrefix = {arXiv},
+       eprint = {2409.03522},
+	   arxiv = {2409.03522},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240903522E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{euclid2024_9,
+		abbr = {euclid2024_2409.02783v1.png},
+ 		bibtex_show = {true},
+       author = {{Euclid Collaboration} and {Ingoglia}, L. and {Sereno}, M. and {Farrens}, S. and {Giocoli}, C. and {Baumont}, L. and {Lesci}, G.~F. and {Moscardini}, L. and {Murray}, C. and {Vannier}, M. and {Biviano}, A. and {Carbone}, C. and {Covone}, G. and {Despali}, G. and {Maturi}, M. and {Maurogordato}, S. and {Meneghetti}, M. and {Radovich}, M. and {Altieri}, B. and {Amara}, A. and {Andreon}, S. and {Auricchio}, N. and {Baccigalupi}, C. and {Baldi}, M. and {Bardelli}, S. and {Bellagamba}, F. and {Bender}, R. and {Bernardeau}, F. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Camera}, S. and {Capobianco}, V. and {Carretero}, J. and {Casas}, S. and {Castellano}, M. and {Castignani}, G. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Courbin}, F. and {Courtois}, H.~M. and {Cropper}, M. and {Da Silva}, A. and {Degaudenzi}, H. and {De Lucia}, G. and {Dinis}, J. and {Dubath}, F. and {Duncan}, C.~A.~J. and {Dupac}, X. and {Dusini}, S. and {Ealet}, A. and {Farina}, M. and {Faustini}, F. and {Ferriol}, S. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Fumana}, M. and {Galeotta}, S. and {Gillard}, W. and {Gillis}, B. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Guzzo}, L. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Hudelot}, P. and {Ili{\'c}}, S. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kubik}, B. and {K{\"u}mmel}, M. and {Kunz}, M. and {Kurki-Suonio}, H. and {Ligori}, S. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Mainetti}, G. and {Maiorano}, E. and {Mansutti}, O. and {Marcin}, S. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Medinaceli}, E. and {Mei}, S. and {Melchior}, M. and {Mellier}, Y. and {Merlin}, E. and {Meylan}, G. and {Moresco}, M. and {Munari}, E. and {Niemi}, S. -M. and {Padilla}, C. and {Paech}, K. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Percival}, W.~J. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Pozzetti}, L. and {Raison}, F. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Rossetti}, E. and {Saglia}, R. and {Sakr}, Z. and {Salvignol}, J. -C. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Schneider}, P. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Tallada-Cresp{\'\i}}, P. and {Tavagnacco}, D. and {Taylor}, A.~N. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Valenziano}, L. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Veropalumbo}, A. and {Wang}, Y. and {Weller}, J. and {Zamorani}, G. and {Zucca}, E. and {Bolzonella}, M. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Farinelli}, R. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Pezzotta}, A. and {P{\"o}ntinen}, M. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Allevato}, V. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Ballardini}, M. and {Bertacca}, D. and {Bethermin}, M. and {Blanchard}, A. and {Blot}, L. and {B{\"o}hringer}, H. and {Borgani}, S. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Ca{\~n}as-Herrera}, G. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Cooray}, A.~R. and {Costanzi}, M. and {Cucciati}, O. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ezziati}, M. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Finoguenov}, A. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gautard}, V. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Le Brun}, A.~M.~C. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Macias-Perez}, J. and {Maggio}, G. and {Magliocchetti}, M. and {Mannucci}, F. and {Maoli}, R. and {Mart{\'\i}n-Fleitas}, J. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Miluzio}, M. and {Monaco}, P. and {Montoro}, A. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Nadathur}, S. and {Walton}, Nicholas A. and {Pagano}, L. and {Patrizii}, L. and {Popa}, V. and {Potter}, D. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Sarpa}, E. and {Schneider}, A. and {Schultheis}, M. and {Simon}, P. and {Spurio Mancini}, A. and {Stadel}, J. and {Stanford}, S.~A. and {Tanidis}, K. and {Tao}, C. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Verza}, G. and {Vielzeuf}, P.},
+        title = "{Euclid preparation: Determining the weak lensing mass accuracy and precision for galaxy clusters}",
+		abstract = "{We investigate the level of accuracy and precision of cluster weak-lensing (WL) masses measured with the \Euclid data processing pipeline. We use the DEMNUni-Cov N-body simulations to assess how well the WL mass probes the true halo mass, and, then, how well WL masses can be recovered in the presence of measurement uncertainties. We consider different halo mass density models, priors, and mass point estimates. WL mass differs from true mass due to, e.g., the intrinsic ellipticity of sources, correlated or uncorrelated matter and large-scale structure, halo triaxiality and orientation, and merging or irregular morphology. In an ideal scenario without observational or measurement errors, the maximum likelihood estimator is the most accurate, with WL masses biased low by ⟨bM⟩=−14.6±1.7% on average over the full range M200c>5×1013M⊙ and z<1. Due to the stabilising effect of the prior, the biweight, mean, and median estimates are more precise. The scatter decreases with increasing mass and informative priors significantly reduce the scatter. Halo mass density profiles with a truncation provide better fits to the lensing signal, while the accuracy and precision are not significantly affected. We further investigate the impact of additional sources of systematic uncertainty on the WL mass, namely the impact of photometric redshift uncertainties and source selection, the expected performance of \Euclid cluster detection algorithms, and the presence of masks. Taken in isolation, we find that the largest effect is induced by non-conservative source selection. This effect can be mostly removed with a robust selection. As a final \Euclid-like test, we combine systematic effects in a realistic observational setting and find results similar to the ideal case, ⟨bM⟩=−15.5±2.4%, under a robust selection.}",
+	  journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.02783},
+        pages = {arXiv:2409.02783},
+archivePrefix = {arXiv},
+		arxiv = {2409.02783},
+       eprint = {2409.02783},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240902783E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{euclid2024_8,
+		abbr = {euclid2024_2409.01877v1.png},
+ 		bibtex_show = {true},
+       author = {{Euclid Collaboration} and {Castro}, T. and {Fumagalli}, A. and {Angulo}, R.~E. and {Bocquet}, S. and {Borgani}, S. and {Costanzi}, M. and {Dakin}, J. and {Dolag}, K. and {Monaco}, P. and {Saro}, A. and {Sefusatti}, E. and {Aghanim}, N. and {Amendola}, L. and {Andreon}, S. and {Baccigalupi}, C. and {Baldi}, M. and {Bodendorf}, C. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Caillat}, A. and {Camera}, S. and {Capobianco}, V. and {Carbone}, C. and {Carretero}, J. and {Casas}, S. and {Castellano}, M. and {Castignani}, G. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Costille}, A. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {De Lucia}, G. and {Di Giorgio}, A.~M. and {Douspis}, M. and {Dupac}, X. and {Dusini}, S. and {Farina}, M. and {Farrens}, S. and {Ferriol}, S. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Fumana}, M. and {Galeotta}, S. and {Gillis}, B. and {Giocoli}, C. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Guzzo}, L. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Ili{\'c}}, S. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kubik}, B. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Maurogordato}, S. and {Medinaceli}, E. and {Melchior}, M. and {Mellier}, Y. and {Meneghetti}, M. and {Merlin}, E. and {Meylan}, G. and {Moscardini}, L. and {Munari}, E. and {Niemi}, S. -M. and {Padilla}, C. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Percival}, W.~J. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Pozzetti}, L. and {Raison}, F. and {Renzi}, A. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Saglia}, R. and {Sakr}, Z. and {Salvignol}, J. -C. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Secroun}, A. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Tallada-Cresp{\'\i}}, P. and {Taylor}, A.~N. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Valenziano}, L. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Wang}, Y. and {Weller}, J. and {Zacchei}, A. and {Zamorani}, G. and {Zucca}, E. and {Biviano}, A. and {Bolzonella}, M. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Mauri}, N. and {Pezzotta}, A. and {P{\"o}ntinen}, M. and {Porciani}, C. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Allevato}, V. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Balaguera-Antolinez}, A. and {Ballardini}, M. and {Bertacca}, D. and {Bethermin}, M. and {Blanchard}, A. and {Blot}, L. and {B{\"o}hringer}, H. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Ca{\~n}as-Herrera}, G. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Chambers}, K.~C. and {Cooray}, A.~R. and {De Caro}, B. and {de la Torre}, S. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Finoguenov}, A. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gautard}, V. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Le Brun}, A.~M.~C. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Maggio}, G. and {Magliocchetti}, M. and {Mannucci}, F. and {Maoli}, R. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Miluzio}, M. and {Montoro}, A. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Nadathur}, S. and {Walton}, Nicholas A. and {Pagano}, L. and {Patrizii}, L. and {Popa}, V. and {Potter}, D. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Sarpa}, E. and {Schneider}, A. and {Sereno}, M. and {Spurio Mancini}, A. and {Stadel}, J. and {Tanidis}, K. and {Tao}, C. and {Tessore}, N. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Verza}, G. and {Vielzeuf}, P.},
+        title = "{Euclid preparation. L. Calibration of the linear halo bias in Λ$(\nu)$CDM cosmologies}",
+      abstract = "{The Euclid mission, designed to map the geometry of the dark Universe, presents an unprecedented opportunity for advancing our understanding of the cosmos through its photometric galaxy cluster survey. This paper focuses on enhancing the precision of halo bias (HB) predictions, which is crucial for deriving cosmological constraints from the clustering of galaxy clusters. Our study is based on the peak-background split (PBS) model linked to the halo mass function (HMF); it extends with a parametric correction to precisely align with results from an extended set of N-body simulations carried out with the OpenGADGET3 code. Employing simulations with fixed and paired initial conditions, we meticulously analyze the matter-halo cross-spectrum and model its covariance using a large number of mock catalogs generated with Lagrangian Perturbation Theory simulations with the PINOCCHIO code. This ensures a comprehensive understanding of the uncertainties in our HB calibration. Our findings indicate that the calibrated HB model is remarkably resilient against changes in cosmological parameters including those involving massive neutrinos. The robustness and adaptability of our calibrated HB model provide an important contribution to the cosmological exploitation of the cluster surveys to be provided by the Euclid mission. This study highlights the necessity of continuously refining the calibration of cosmological tools like the HB to match the advancing quality of observational data. As we project the impact of our model on cosmological constraints, we find that, given the sensitivity of the Euclid survey, a miscalibration of the HB could introduce biases in cluster cosmology analyses. Our work fills this critical gap, ensuring the HB calibration matches the expected precision of the Euclid survey.}",
+	  journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.01877},
+        pages = {arXiv:2409.01877},
+archivePrefix = {arXiv},
+       eprint = {2409.01877},
+		arxiv = {2409.01877},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240901877E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{liaudat2023_3,
 	abbr = {liaudat2023_3.png},
 	bibtex_show = {true},
@@ -212,12 +312,6 @@ archivePrefix = {arXiv},
     adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240210740L},
     adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
-
-
-
-
 
 @Article{mcewen2023,
 	abbr = {mcewen2023.png},
